--- a/templates/db.template.html.twig
+++ b/templates/db.template.html.twig
@@ -53,7 +53,7 @@
             <div class="ui dropdown item">
                 Moderation <i class="dropdown icon"></i>
                 <div class="menu">
-                    <a href="/dashboard/moderation/posts" class="item"><i class="fas fa-file"></i> Beiträge</a>
+                    <a href="/dashboard/moderation/posts" class="item"><i class="fas fa-list"></i> Beiträge</a>
                 </div>
             </div>
         {% endif %}
@@ -63,6 +63,7 @@
                 Administration <i class="dropdown icon"></i>
                 <div class="menu">
                     <a href="/dashboard/admin/users/" class="item"><i class="fas fa-users"></i> Benutzer</a>
+                    <a href="/dashboard/admin/pages" class="item"><i class="fas fa-file"></i> Seiten</a>
                     <a href="/dashboard/admin/config/" class="item"><i class="fas fa-cog"></i> Einstellungen</a>
                 </div>
             </div>
