--- a/templates/frontend/header.html.twig
+++ b/templates/frontend/header.html.twig
@@ -32,9 +32,8 @@
     <div class="ul-container-sidemenu">
         <ul class="ul-sidemenu">
             <li class="menu-link"><a href="/">Startseite</a></li>
-            <li class="menu-link"><a href="/team">Das Team</a></li>
-            <li class="menu-link"><a href="/schule">Die Schule</a></li>
-            <li class="menu-link"><a href="/angebote">Weitere Angebote</a></li>
+            <li class="menu-link"><a href="/page/team">Das Team</a></li>
+            <li class="menu-link"><a href="/page/schule">Die Schule</a></li>
         </ul>
     </div>
 
