--- a/templates/frontend/post.view.html.twig
+++ b/templates/frontend/post.view.html.twig
@@ -11,7 +11,9 @@
         <img src="{{ path('loadPostImage', {'post': post.id}) }}" ">
     </div>
 
+    {% autoescape %}
     <p>{{ post.content | raw }}</p>
+    {% endautoescape %}
 
 </div>
 
