--- a/templates/admin/users.list.html.twig
+++ b/templates/admin/users.list.html.twig
@@ -7,6 +7,14 @@
 
         <h1>Benutzer</h1>
 
+        {% for message in app.flashes('error') %}
+            <div class="ui negative message">{{ message }}</div>
+        {% endfor %}
+
+        {% for message in app.flashes('succes') %}
+            <div class="ui positive message">{{ message }}</div>
+        {% endfor %}
+
         <table class="ui table">
 
             <thead>
