--- a/templates/dashboard/mod/mod.posts.check.html.twig
+++ b/templates/dashboard/mod/mod.posts.check.html.twig
@@ -61,7 +61,9 @@
                 </div>
 
                 <div class="content">
+                    {% autoescape %}
                     {{ post.content | raw }}
+                    {% endautoescape %}
                 </div>
             </div>
 
