--- a/templates/db.header.html.twig
+++ b/templates/db.header.html.twig
@@ -63,6 +63,7 @@
                         Administration <i class="dropdown icon"></i>
                         <div class="menu">
                             <a href="/dashboard/admin/users/" class="item"><i class="fas fa-users"></i> Benutzer</a>
+                            <a href="/dashboard/admin/pages" class="item"><i class="fas fa-file"></i> Seiten</a>
                             <a href="/dashboard/admin/config/" class="item"><i class="fas fa-cog"></i> Einstellungen</a>
                         </div>
                     </div>
