--- a/templates/extra/tinymce.html.twig
+++ b/templates/extra/tinymce.html.twig
@@ -1,3 +1,3 @@
 {% block tinymce_widget %}
-    <textarea id="tinymce" rows="20"></textarea>
+    <textarea {{ block('widget_attributes') }} class="tinymce" rows="20"></textarea>
 {% endblock %}
