--- a/templates/dashboard/mod/mod.posts.html.twig
+++ b/templates/dashboard/mod/mod.posts.html.twig
@@ -35,7 +35,7 @@
 
     <h1>Moderation - Beiträge</h1>
 
-    {% for message in app.flashes('status') %}
+    {% for message in app.flashes('success') %}
         <div class="ui primary message">{{ message }}</div>
     {% endfor %}
 
