--- a/templates/db.header.html.twig
+++ b/templates/db.header.html.twig
@@ -54,6 +54,7 @@
                         Moderation <i class="dropdown icon"></i>
                         <div class="menu">
                             <a href="/dashboard/moderation/posts" class="item"><i class="fas fa-file"></i> Beiträge</a>
+                            <a href="/dashboard/moderation/comments" class="item">Kommentare</a>
                         </div>
                     </div>
                 {% endif %}
