--- a/templates/admin/pages/pages.edit.html.twig
+++ b/templates/admin/pages/pages.edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'db.template.html.twig' %}
 
-{% block title %}Seite hinzufügen - Schülerblog Gymnasium Oesede{% endblock %}
+{% block title %}Seite bearbeiten{% endblock %}
 
 {% block content %}
 
