--- a/templates/dashboard/posts/post.list.html.twig
+++ b/templates/dashboard/posts/post.list.html.twig
@@ -1,5 +1,7 @@
 {% extends 'db.template.html.twig' %}
 
+{% block title %}Deine Beiträge{% endblock %}
+
 {% block content %}
 
     <h1>Deine Beiträge</h1>
@@ -20,10 +22,24 @@
             <tr>
                 <td>{{ post.title }}</td>
                 <td>{{ post.date | date('d.m.Y') }}</td>
-                <td>{% if post.published %} <div class="ui green label">Öffentlich</div> {% elseif post.denied is defined and post.denied %}<div class="ui red label">Abgelehnt</div> {% else %} <div class="ui yellow label">Warteschlange</div> {% endif %}</td>
+                <td>
+
+                    {% if post.isPublished %}
+                        <div class="ui green label">Öffentlich</div>
+                    {% elseif post.isQueued %}
+                        <div class="ui yellow label">Warteschlange</div>
+                    {% elseif post.isDenied %}
+                        <div class="ui red label">Abgelehnt</div>
+                    {% else  %}
+                        <div class="ui grey label">Gespeichert</div>
+                    {% endif %}
+                </td>
                 <td>
                     {% if post.denied is defined and post.denied %}
                         <a class="ui positive button" href="{{ path('updateContent', {'id': post.id}) }}">Änderungen vorschlagen</a>
+                    {% endif %}
+                    {% if post.isSaved %}
+                        <a class="ui secondary button" href="{{ path('postAddContent', {'post': post.id}) }}">Bearbeiten</a>
                     {% endif %}
                     <a class="ui negative button" href="{{ path('postDelete', {'id': post.id}) }}">Löschen</a>
                 </td>
