--- a/templates/frontend/index.template.html.twig
+++ b/templates/frontend/index.template.html.twig
@@ -27,7 +27,7 @@
 
 
         <h1>Schülerblog - Gymnasium Oesede</h1>
-        <p>Herzlich Willkommen auf dem Schülerblog des Gymnasiums Oesede - ein Projekt von Schülern und Lehrern - für alle Schülerrinnen und Schüler. // TODO: Beschreibung</p>
+        <p>Herzlich Willkommen, Sie befinden sich auf der Homepage des Schülerblogs des Gymnasiums Oesede, auf dieser Seite finden Sie die neusten Beiträge unseres Blogs. Auf der Seite "Team" finden Sie außerdem mehr Informationen über unsere Redaktion.</p>
 
         <div class="posts-container">
 
