--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -18,7 +18,7 @@ body {
     width: 100%;
     height: 70px;
     background-color: #1b1b1f;
-    z-index: 100
+    z-index: 1000;
 }
 
 .menu > .menu-branding {
@@ -171,7 +171,7 @@ p {
     width: 320px;
     height: 100%;
     background-color: #1b1b1f;
-    z-index: 100;
+    z-index: 2000;
     padding: 10px;
     display: none;
 }
@@ -608,11 +608,11 @@ h3 {
         width: 100%;
     }
 
+    .footer-grid {
+        height: auto;
+    }
 }
 
-.ui.form {
-    padding: 15px;
-}
 
 .ui.form input {
     display: block;
@@ -648,4 +648,103 @@ h3 {
     padding: 10px;
     font-family: 'Fira Sans', sans-serif;
     font-size: 13px;
+}
+
+.post.comment {
+    border: 2px solid darkgray;
+    padding: 15px;
+    width: 100%;
+    display: block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+    overflow: auto;
+}
+
+.comment > .author > .pb {
+    height: 120px;
+    width: 120px;
+    background: darkgray;
+    color: white;
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+}
+
+.comment > .author > .name {
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.comment > .author {
+    float: left;
+    min-width: 140px;
+    height: 100%;
+}
+
+.comment > .mod-controls {
+    width: 100%;
+    float: left;
+    margin-top: 10px;
+}
+
+.comment > .content {
+    float: left;
+}
+
+.button.small {
+    width: auto !important;
+    margin-bottom: 0;
+    margin-top: auto;
+    display: table;
+}
+
+.badge {
+    padding: 5px;
+    background-color: dimgray;
+    color: white;
+    border-radius: 5px;
+    text-transform: uppercase;
+    font-weight: bold;
+    width: auto;
+    display: block;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+}
+
+.badge-yellow {
+    background-color: #ffb826;
+    display: block;
+}
+
+.category-box {
+    padding: 15px;
+    background-color: #1b1b1f;
+    color: white;
+    font-weight: bold;
+    display: inline-block;
+    box-sizing: border-box;
+    position: relative;
+}
+
+.category-edge {
+    margin-left: -15px;
+    -webkit-transform: skewX(-10deg);
+    -moz-transform: skewX(-10deg);
+    -ms-transform: skewX(-10deg);
+    -o-transform: skewX(-10deg);
+    transform: skewX(-10deg);
+    display: block;
+    margin-top: 0;
+    background-color: #1d1d1f;
+    position: absolute;
+    top: 0;
+    right: -10px;
+    width: 20px;
+    height: 49px;
 }
