--- a/templates/admin/config/edit.html.twig
+++ b/templates/admin/config/edit.html.twig
@@ -1,3 +1,13 @@
 {% extends 'db.template.html.twig' %}
 
 {% block title %}Einstellung bearbeiten - Schülerblog Gymnasium Oesede{% endblock %}
+
+{% block content %}
+
+    <h1>Einstellung - {{ setting.name }}</h1>
+
+    {{ form_start(form) }}
+    {{ form_widget(form) }}
+    {{ form_end(form) }}
+
+{% endblock %}
