--- a/templates/admin/pages/pages.list.html.twig
+++ b/templates/admin/pages/pages.list.html.twig
@@ -1,5 +1,7 @@
 {% extends 'db.template.html.twig' %}
 
+{% block title %}Seiten{% endblock %}
+
 {% block content %}
 
     {% for message in app.flashes('success') %}
