--- a/templates/admin/users.list.html.twig
+++ b/templates/admin/users.list.html.twig
@@ -1,6 +1,8 @@
 {% extends 'db.template.html.twig' %}
 
-    {% block content %}
+{% block title %}Benutzer{% endblock %}
+
+{% block content %}
 <div class="ui grid">
 
     <div class="twelve wide column">
