--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -1,4 +1,9 @@
-{% include('db.header.html.twig') %}
+{% extends('db.template.html.twig') %}
+
+{% block title %}Dashboard{% endblock %}
+
+{% block content %}
+
 
     <div class="ui container">
 
@@ -31,12 +36,12 @@
                     <table class="ui table">
 
                         <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Autor</th>
-                                <th>Datum</th>
-                                <th>Aktion</th>
-                            </tr>
+                        <tr>
+                            <th>Name</th>
+                            <th>Autor</th>
+                            <th>Datum</th>
+                            <th>Aktion</th>
+                        </tr>
                         </thead>
 
                         <tbody>
@@ -64,7 +69,7 @@
 
                     {% if debug_mode is defined and debug_mode %}
                         <div class="ui negative card">
-                            <div class="content">Konfiguration fehlerhaft</div>
+                            <div class="content card-header">Konfiguration fehlerhaft</div>
                             <div class="content">Achtung: Die Applikation läuft aktuell im Entwicklungsmodus, die Anwendung solle so nicht auf einem Server im Internet hochgeladen werden.</div>
                         </div>
                     {% endif %}
@@ -84,4 +89,4 @@
 
     </div>
 
-{% include('db.footer.html.twig') %}
+{% endblock %}
