--- a/templates/dashboard/posts/posts.create.html.twig
+++ b/templates/dashboard/posts/posts.create.html.twig
@@ -1,5 +1,7 @@
 {% extends 'db.template.html.twig' %}
 
+{% block title %}Beitrag erstellen{% endblock %}
+
 {% block content %}
 
     {% for message in app.flashes('success') %}
